if (APPLE)
    if(BUILD_FOR_IOS)
        add_executable(HelloWindow MACOSX_BUNDLE Main.c)
        set_target_properties(HelloWindow PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist)
    else()
        # add_executable(HelloWindow MACOSX_BUNDLE Main.c)
        add_executable(HelloWindow Main.c)
    endif()
else()
    add_executable(HelloWindow Main.c)
endif()

target_link_libraries(HelloWindow PRIVATE ElementalInterface)
