add_library(Elemental.Tools.Native SHARED UnityBuild.cpp)

target_compile_options(Elemental.Tools.Native PRIVATE -W4)
target_compile_options(Elemental.Tools.Native PRIVATE -Wno-unused-parameter)
target_compile_features(Elemental.Tools.Native PRIVATE cxx_std_20)
target_precompile_headers(Elemental.Tools.Native PRIVATE PreCompiledHeader.h)

target_link_libraries(Elemental.Tools.Native PRIVATE common)
target_link_libraries(Elemental.Tools.Native PRIVATE tools_external_dependencies)

if(WIN32)
    target_compile_options(Elemental.Tools.Native PRIVATE -EHs -MD)
    target_compile_definitions(Elemental.Tools.Native PRIVATE UNICODE _UNICODE _WINDOWS _WIN32)
elseif(APPLE)
    target_include_directories(Elemental.Tools.Native PRIVATE ./Interop/)
    target_compile_options(Elemental.Tools.Native PRIVATE -fms-extensions -fno-objc-arc)
else()
    target_include_directories(Elemental.Tools.Native PRIVATE ./Interop/)
    target_compile_options(Elemental.Tools.Native PRIVATE -fms-extensions)
endif()
