add_library(Elemental.Tools.Native SHARED UnityBuild.cpp)

target_compile_options(Elemental.Tools.Native PRIVATE -W4)
target_compile_options(Elemental.Tools.Native PRIVATE -Wno-unused-parameter)
target_precompile_headers(Elemental.Tools.Native PRIVATE PreCompiledHeader.h)

target_link_libraries(Elemental.Tools.Native PRIVATE common)
target_link_libraries(Elemental.Tools.Native PRIVATE external_dependencies)
target_link_libraries(Elemental.Tools.Native PRIVATE tools_external_dependencies)

if(WIN32)
    target_include_directories(Elemental.Tools.Native PRIVATE ../Elemental.Native/Windows/)
    target_compile_options(Elemental.Tools.Native PRIVATE -EHs -MD)
    target_compile_definitions(Elemental.Tools.Native PRIVATE UNICODE _UNICODE _WINDOWS _WIN32)
elseif(APPLE)
    target_include_directories(Elemental.Tools.Native PRIVATE ../Elemental.Native/Apple/)
    target_include_directories(Elemental.Tools.Native PRIVATE ./Interop/)
    target_compile_options(Elemental.Tools.Native PRIVATE -fms-extensions -fno-objc-arc)
    target_link_options(Elemental.Tools.Native PRIVATE "SHELL:-framework Metal" "SHELL:-framework Foundation" "SHELL:-framework Cocoa" "SHELL:-framework CoreGraphics" "SHELL:-framework IOKit")
else()
    target_include_directories(Elemental.Tools.Native PRIVATE ./Interop/)
    target_compile_options(Elemental.Tools.Native PRIVATE -fms-extensions)
endif()
