add_library(Elemental.Tools SHARED UnityBuild.cpp)

target_compile_options(Elemental.Tools PRIVATE -W4)
target_compile_options(Elemental.Tools PRIVATE -Wno-unused-parameter)
target_precompile_headers(Elemental.Tools PRIVATE PreCompiledHeader.h)

target_link_libraries(Elemental.Tools PRIVATE common)
target_link_libraries(Elemental.Tools PRIVATE external_dependencies)
target_link_libraries(Elemental.Tools PRIVATE tools_external_dependencies)

if(WIN32)
    target_include_directories(Elemental.Tools PRIVATE ../Elemental.Native/Windows/)
    target_compile_options(Elemental.Tools PRIVATE -EHs -MD)
    target_compile_definitions(Elemental.Tools PRIVATE UNICODE _UNICODE _WINDOWS _WIN32)
    target_link_libraries(Elemental.Tools PRIVATE Dwmapi UxTheme onecore)
elseif(APPLE)
    target_include_directories(Elemental.Tools PRIVATE ../Elemental.Native/Apple/)
    target_include_directories(Elemental.Tools PRIVATE ./Interop/)
    target_compile_options(Elemental.Tools PRIVATE -fms-extensions -fno-objc-arc)
    target_link_options(Elemental.Tools PRIVATE "SHELL:-framework Metal" "SHELL:-framework Foundation" "SHELL:-framework Cocoa" "SHELL:-framework CoreGraphics" "SHELL:-framework IOKit")
else()
    target_include_directories(Elemental.Tools PRIVATE ./Interop/)
    target_compile_options(Elemental.Tools PRIVATE -fms-extensions)
endif()
